--- a/terms-and-condition.html
+++ b/terms-and-condition.html
@@ -235,7 +235,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="mb-2">
                     <h2 class="level5 secondaryColor"> 1. Bookings</h2>
                     <ul class="list-inline mb-0">
-                        <li>Online:<br><a href="http://www.airportshuttles4less.com"> www.airportshuttles4less.com<br> http://www.airportshuttles4less.com</a></li>
+                        <li>Online:<br><a href="https://www.airportshuttles4less.com"> www.airportshuttles4less.com<br> https://www.airportshuttles4less.com</a></li>
                         <li>Phone: 1-443-336-3333</li>
                         <li>WhatsApp: 1-443-336-3333</li>
                         <li>Email: Info@airportshuttles4less.com</li>
