bad url removed

--- a/corporate-transportation-services.html
+++ b/corporate-transportation-services.html
@@ -162,7 +162,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             Make sure to leave a lasting impression with our VIP chauffeured service when your high-level executives or corporate guests arrive in town. 
                             You can use our discreet, professionally dressed chauffeurs and top-tier luxury vehicles for pickups from private airports (FBOs) or transport to exclusive venues like the 
                             <a href="https://www.marriott.com/en-us/hotels/waswi-willard-intercontinental-washington-dc/" target="_blank">Willard InterContinental</a>, 
-                            <a href="https://www.capelladc.com/" target="_blank">Capella DC</a>, or downtown boardrooms. Privacy, comfort, and punctuality is our standard.
+                             or downtown boardrooms. Privacy, comfort, and punctuality is our standard.
                           </p>
 
                           <h3>Client Pickups and Drop-offs</h3>
