--- a/DL/point-to-point-limo-service.html
+++ b/DL/point-to-point-limo-service.html
@@ -1096,16 +1096,20 @@
         </footer>
 
         <!-- bottomRow -->
-        <section class="bottomRow py-3 primaryBg">
+<section class="bottomRow py-3 primaryBg">
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-lg-4 col-md-5 col-sm-6 col-12">
-                        <p class="mb-0 whiteText primaryText">© 2024 AS4L. All Rights Reserved.</p>
+                        <p class="mb-0 whiteText primaryText">© 2025 AS4L. All Rights Reserved.</p>
                     </div>
                     <div class="col-lg-4 col-md-5 col-sm-6 col-12">
                         <ul class="list-inline mb-0 d-flex justify-content-end">
                             <li>
                                 <a href="terms-and-condition.html" class="whiteText"> Terms and Condition</a>
+                            </li>
+                            <li style="color: white; margin: 0 10px;">|</li>
+                            <li>
+                                <a href="privacy-policy.html" class="whiteText"> Privacy Policy</a>
                             </li>
                         </ul>
                     </div>
