--- a/bwi-shuttle-service-bwi-limo-service.html
+++ b/bwi-shuttle-service-bwi-limo-service.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BWI Airport Transfer | Executive Car, Shuttle & Limo</title>
-  <meta name="description" content="Are you looking for airport transportation service? You are welcome at AirportShuttle4Less to travel stress-free with our BWI Airport transfer services.">
+  <title>BWI Airport Shuttle & Limo Service | Executive Sedan</title>
+  <meta name="description" content="Travel in comfort and style with our BWI Airport Shuttle & Limo Service. Executive sedan, limo, and private shuttle options for stress-free airport transfers.">
   <meta name="keywords" content="BWI Airport Transfer,BWI Airport Transportation,BWI shuttle service,BWI Airport Shuttle,BWI Limo Service,BWI airport car service,BWI Airport Transportation,BWI airport,Limo Service to BWI,Sedan Service to BWI,BWI black car service">
   <link rel="canonical" href="https://airportshuttles4less.com/bwi-shuttle-service-bwi-limo-service.html">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -96,7 +96,7 @@
             <img src="assets/images/bwiTansportImg.webp" loading="lazy" class="w-100 topSecImg" alt="BWI-Transport">
           </div>
           <div class="col-lg-6 col-md-12">
-            <h1 class="mb-3 level3 primaryColor text-uppercase">Simplify Your Journey with AS4L’s BWI Airport Transfers & Limo</h1>
+            <h1 class="mb-3 level3 primaryColor text-uppercase">Simplify Your Journey with AS4L’s BWI Airport Shuttle & Limo Service</h1>
             <p class="mb-3 secondaryText greyText">Airport travel can often feel like a frustration to crowds, unpredictable schedules and terminal navigation hassles that leave even the calmest travelers stressed and worried. At AirportShuttles4Less we specialize in offering <strong>Superior BWI Airport Transfer solutions</strong> tailored to each passenger's individual needs. Be it solo travelers, families on vacation or corporate groups all alike can use our <strong>BWI Airport Transportation</strong> without stressing out about comfort, reliability and style!</p>
             <a href="reservation.html" class="primaryButton text-uppercase">Book Reservation</a>
           </div>
