--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxury Airport Shuttles & Sedan Service | Airport Shuttles 4 Less</title>
+    <title>Airport Shuttle & Sedan Service DMV Areas | Washington, DC Maryland, & Virginia</title>
     <meta name="author" content="AirportShuttles4Less - AS4L">
-    <meta name="description" content="Stress-free airport transportation in the DMV area. Luxury rides at affordable prices. Serving BWI, DCA, and IAD. Book your safe and reliable shuttle today!">
+    <meta name="description" content="Stress free airport shuttle service in the DMV area Luxury rides at affordable prices Serving BWI, DCA, and IAD Book your safe and reliable shuttle today!">
     <meta name="keywords" content="Shuttle service,Airport shuttle service,Airport transportation,Airport transfer,School transportation,Bus and Coaches transportation,Large Vans, mini Busses and Motor coaches transportation,sprinter van shuttle service,sprinter van rental BWI airport,sprinter van transportation service">
     <meta name="robots" content="INDEX,FOLLOW">
 
@@ -142,7 +142,7 @@
                         <div class="col-lg-8 col-md-10 col-sm-12 col-12 mx-auto">
                             <div class="bannerInnerText p-4">
                                 <h1 class="text-center mb-0 level1 whiteText">
-                                    Reliable Airport Shuttle & Transportation Services in the DMV Area
+                                   Reliable Airport Shuttle Service in the DMV Area
                                 </h1>
                             </div>
                             <div class="bannerButton">
@@ -5094,7 +5094,7 @@
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                         <div class="aboutCntnt ps-5">
-                            <h2 class="mb-3 level2 blackText">Welcome to AirportShuttles4Less</h2>
+                            <h2 class="mb-3 level2 blackText">Welcome to AirportShuttles4Less For Luxury Airport Transportation Service</h2>
                             <p class="greyText secondaryText mb-2">
                                 Your trusted <strong>shuttle service & transportation partner</strong> in the <a href="https://en.wikipedia.org/wiki/Washington_metropolitan_area" target="_blank" rel="noopener noreferrer">DMV area!</a> AirportShuttles4Less is a premier shuttle service and transportation service provider  in the DMV area. AS4L is offering the most <strong>affordable, reliable, and professional</strong> shuttle services across <a href="https://en.wikipedia.org/wiki/Washington,_D.C." target="_blank" rel="noopener noreferrer">Washington, D.C.</a>, <a href="https://en.wikipedia.org/wiki/Maryland" target="_blank" rel="noopener noreferrer">Maryland</a>, and <a href="https://en.wikipedia.org/wiki/Virginia" target="_blank" rel="noopener noreferrer">Virginia</a> region. We serve individuals, families, corporate travelers, schools, and event groups with a strong commitment to customer satisfaction and timely service with our clean and well-maintained <a href="https://airportshuttles4less.com/our-fleet.html" target="_blank" rel="noopener noreferrer">fleet</a> of <strong>Limousines, Sedans, SUVs, Sprinter vans, and Motor coaches</strong>.
 
