--- a/phl-limo-service-phl-car-service.html
+++ b/phl-limo-service-phl-car-service.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PHL Airport Transfer | PHL Luxury Rides</title>
-  <meta name="description" content="AirportShuttle4Less is offering PHL Airport transfer services. Book your rides to experience on-time pickups and professional service in Philadelphia!">
+  <title>PHL Airport Shuttle and Limo Service | PHL Luxury Airport Rides</title>
+  <meta name="description" content="Travel with ease using our professional PHL Airport Shuttle and Limo Service. Whether you prefer a sedan, limo, or private shuttle, we make your PHL Airport ride smooth and reliable.">
   <meta name="keywords" content="PHL + Airport Transfer,PHL Airport Car Service,Philadelphia Airport Shuttle,PHL Airport Transportation,airport transportation services in Philadelphia,PHL Airport,PHL Airport Transfers,Philadelphia Airport Transfers.">
   <link rel="canonical" href="https://airportshuttles4less.com/phl-limo-service-phl-car-service.html">
   <!--<link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" >-->
