Blog Archive updates

--- a/footer.html
+++ b/footer.html
@@ -4,8 +4,8 @@
         <div class="row align-items-center">
             <div class="col-lg-3 col-md-3 col-sm-3 col-12">
                 <div class="ctaLogo">
-                    <a href="index.html">
-                        <img src="assets/images/footerLogo.svg" class="w-100" alt="logo">
+                    <a href="https://airportshuttles4less.com/index.html">
+                        <img src="../assets/images/footerLogo.svg" class="w-100" alt="logo">
                     </a>
                 </div>
             </div>
@@ -33,12 +33,12 @@
                     <ul class="trustList list-inline mb-3 d-flex align-items-center justify-content-between gap-2 rounded whiteBg p-2 mt-4">
                         <li class="w-50">
                             <a href="https://www.tripadvisor.com/Profile/Airportshuttles4less" target="_blank">
-                                <img src="assets/images/tripadvisor.webp" class="w-100">
+                                <img src="../assets/images/tripadvisor.webp" class="w-100">
                             </a>
                         </li>
                         <li class="w-50">
                             <a href="https://www.trustpilot.com/review/airportshuttles4less.com" target="_blank">
-                                <img src="assets/images/trustpilot.webp" class="w-100">
+                                <img src="../assets/images/trustpilot.webp" class="w-100">
                             </a>
                         </li>
                     </ul>
@@ -61,12 +61,12 @@
                 <div class="footerContent quicklist">
                     <h4 class="whiteText text-uppercase level4 mb-3">Service Area</h4>
                     <ul class="list-inline mb-0">
-                        <li class="mb-2"><a href="worldwide-limos-transportation-service.html" class="greyText level5">Worldwide Locations</a></li>
-                        <li class="mb-2"><a href="worldwide-limos-transportation-service.html" class="greyText primaryText">United States of America</a></li>
-                        <li class="mb-2"><a href="worldwide-limos-transportation-service.html" class="greyText primaryText">Dubai</a></li>
-                        <li class="mb-2"><a href="worldwide-limos-transportation-service.html" class="greyText primaryText">France</a></li>
-                        <li class="mb-2"><a href="worldwide-limos-transportation-service.html" class="greyText primaryText">India</a></li>
-                        <li class="mb-2"><a href="worldwide-limos-transportation-service.html" class="greyText primaryText">United Kingdom</a></li>
+                        <li class="mb-2"><a href="https://airportshuttles4less.com/worldwide-limos-transportation-service.html" class="greyText level5">Worldwide Locations</a></li>
+                        <li class="mb-2"><a href="https://airportshuttles4less.com/worldwide-limos-transportation-service.html" class="greyText primaryText">United States of America</a></li>
+                        <li class="mb-2"><a href="https://airportshuttles4less.com/worldwide-limos-transportation-service.html" class="greyText primaryText">Dubai</a></li>
+                        <li class="mb-2"><a href="https://airportshuttles4less.com/worldwide-limos-transportation-service.html" class="greyText primaryText">France</a></li>
+                        <li class="mb-2"><a href="https://airportshuttles4less.com/worldwide-limos-transportation-service.html" class="greyText primaryText">India</a></li>
+                        <li class="mb-2"><a href="https://airportshuttles4less.com/worldwide-limos-transportation-service.html" class="greyText primaryText">United Kingdom</a></li>
                     </ul>
                 </div>
             </div>
@@ -75,43 +75,43 @@
                     <h4 class="whiteText text-uppercase level4 mb-3">Services</h4>
                     <ul class="list-inline mb-0">
                         <li class="mb-2">
-                            <a href="washington-dc-point-to-point-limo-service.html" class="greyText primaryText">POINT TO POINT SERVICE</a>
+                            <a href="https://airportshuttles4less.com/washington-dc-point-to-point-limo-service.html" class="greyText primaryText">POINT TO POINT SERVICE</a>
                         </li>
                         <li class="mb-2">
-                            <a href="airport-limo-service.html" class="greyText primaryText">AIRPORT LIMO</a>
+                            <a href="https://airportshuttles4less.com/airport-limo-service.html" class="greyText primaryText">AIRPORT LIMO</a>
                         </li>
                         <li class="mb-2">
-                            <a href="exclusive-shuttle-service.html" class="greyText primaryText">EXCLUSIVE SHUTTLE SERVICE</a>
+                            <a href="https://airportshuttles4less.com/exclusive-shuttle-service.html" class="greyText primaryText">EXCLUSIVE SHUTTLE SERVICE</a>
                         </li>
                         <li class="mb-2">
-                            <a href="baltimore-sedan-car-service.html" class="greyText primaryText">SEDAN &amp; CAR SERVICE</a>
+                            <a href="https://airportshuttles4less.com/baltimore-sedan-car-service.html" class="greyText primaryText">SEDAN &amp; CAR SERVICE</a>
                         </li>
                         <li class="mb-2">
-                            <a href="14-passenger-sprinter-van-service.html" class="greyText primaryText">VAN SERVICE</a>
+                            <a href="https://airportshuttles4less.com/14-passenger-sprinter-van-service.html" class="greyText primaryText">VAN SERVICE</a>
                         </li>
                         <li class="mb-2">
-                            <a href="corporate-limo-service.html" class="greyText primaryText">CORPORATE SERVICE</a>
+                            <a href="https://airportshuttles4less.com/corporate-limo-service.html" class="greyText primaryText">CORPORATE SERVICE</a>
                         </li>
                         <li class="mb-2">
-                            <a href="luxury-wine-tour-limousine-transportation-service.html" class="greyText primaryText">WINE &amp; CITY TOUR</a>
+                            <a href="https://airportshuttles4less.com/luxury-wine-tour-limousine-transportation-service.html" class="greyText primaryText">WINE &amp; CITY TOUR</a>
                         </li>
                         <li class="mb-2">
-                            <a href="washington-dc-tour-limo-service.html" class="greyText primaryText">WASHINGTON DC TOUR</a>
+                            <a href="https://airportshuttles4less.com/washington-dc-tour-limo-service.html" class="greyText primaryText">WASHINGTON DC TOUR</a>
                         </li>
                         <li class="mb-2">
-                            <a href="school-transportation-shuttle-service.html" class="greyText primaryText">Private School Bus Service</a>
+                            <a href="https://airportshuttles4less.com/school-transportation-shuttle-service.html" class="greyText primaryText">Private School Bus Service</a>
                         </li>
                         <li class="mb-2">
-                            <a href="limousine-party-services.html" class="greyText primaryText">LIMOUSINE RENTAL</a>
+                            <a href="https://airportshuttles4less.com/limousine-party-services.html" class="greyText primaryText">LIMOUSINE RENTAL</a>
                         </li>
                         <li class="mb-2">
-                            <a href="limo-party-bus-rental-services.html" class="greyText primaryText">PARTY BUS RENTAL</a>
+                            <a href="https://airportshuttles4less.com/limo-party-bus-rental-services.html" class="greyText primaryText">PARTY BUS RENTAL</a>
                         </li>
                         <li class="mb-2">
-                            <a href="limos-wedding-services.html" class="greyText primaryText">WEDDING SPECIAL</a>
+                            <a href="https://airportshuttles4less.com/limos-wedding-services.html" class="greyText primaryText">WEDDING SPECIAL</a>
                         </li>
                         <li class="mb-2">
-                            <a href="black-limo-motor-coaches.html" class="greyText primaryText">MOTOR COACHES</a>
+                            <a href="https://airportshuttles4less.com/black-limo-motor-coaches.html" class="greyText primaryText">MOTOR COACHES</a>
                         </li>
                     </ul>
                 </div>
@@ -120,10 +120,10 @@
                 <div class="footerContent quicklist">
                     <h4 class="whiteText text-uppercase level4 mb-3">Useful Links</h4>
                     <ul class="list-inline mb-3">
-                        <li class="mb-2"><a href="About-us.html" class="greyText primaryText">About Us</a></li>
-                        <li class="mb-2"><a href="our-fleet.html" class="greyText primaryText">Fleet</a></li>
-                        <li class="mb-2"><a href="faqs.html" class="greyText primaryText">FAQ</a></li>
-                        <li class="mb-2"><a href="Contact-us.html" class="greyText primaryText">Contact Us</a></li>
+                        <li class="mb-2"><a href="https://airportshuttles4less.com/About-us.html" class="greyText primaryText">About Us</a></li>
+                        <li class="mb-2"><a href="https://airportshuttles4less.com/our-fleet.html" class="greyText primaryText">Fleet</a></li>
+                        <li class="mb-2"><a href="https://airportshuttles4less.com/faqs.html" class="greyText primaryText">FAQ</a></li>
+                        <li class="mb-2"><a href="https://airportshuttles4less.com/Contact-us.html" class="greyText primaryText">Contact Us</a></li>
                     </ul>
                     <h4 class="whiteText text-uppercase level4 mb-3">Contact Detail</h4>
                     <ul class="footerContactList list-inline mb-4">
@@ -195,11 +195,11 @@
                     <div class="col-lg-4 col-md-5 col-sm-6 col-12">
                         <ul class="list-inline mb-0 d-flex justify-content-end">
                             <li>
-                                <a href="terms-and-condition.html" class="whiteText"> Terms and Condition</a>
+                                <a href="https://airportshuttles4less.com/terms-and-condition.html" class="whiteText"> Terms and Condition</a>
                             </li>
                             <li style="color: white; margin: 0 10px;">|</li>
                             <li>
-                                <a href="privacy-policy.html" class="whiteText"> Privacy Policy</a>
+                                <a href="https://airportshuttles4less.com/privacy-policy.html" class="whiteText"> Privacy Policy</a>
                             </li>
                         </ul>
                     </div>
