--- a/alexandria-va-shuttle-service.html
+++ b/alexandria-va-shuttle-service.html
@@ -92,7 +92,7 @@
             </p>
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-            <p class="mb-3 secondaryText greyText">With pride, AirportShuttles4Less provides Alexandria Limo Service and other high-end transportation services in Virginia, Washington, D.C., and Maryland. Our fleet offers elegant, comfortable, and worry-free rides for all trips. Get into a spotless and sleek vehicle, dispelling the stress of traffic congestion, parking, and long lines. Our Alexandria transport services and Alexandria Airport Transportation guarantee smooth traveling for solo guests, families, and group tours.
+            <p class="mb-3 secondaryText greyText">With pride, AirportShuttles4Less provides Alexandria Limo Service and other high-end transportation services in <a href="/mclean-shuttle-service.html">Virginia</a>,  <a href="/shuttle-service-washington-dc.html ">Washington, D.C.</a>, and <a href="/maryland.html">Maryland</a>. Our fleet offers elegant, comfortable, and worry-free rides for all trips. Get into a spotless and sleek vehicle, dispelling the stress of traffic congestion, parking, and long lines. Our Alexandria transport services and Alexandria Airport Transportation guarantee smooth traveling for solo guests, families, and group tours.
 
             </p>
           </div>
@@ -117,7 +117,7 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-12">
             <h3 class="mb-3 level3 primaryColor text-uppercase">Airport Transportation Services in Alexandria</h3>
-            <p class="mb-3 secondaryText greyText">Traveling by air can be tiring, but your ground travel need not be. With our Alexandria Airport Limo Service, enjoy on-time pickups, comfortable rides, and smooth transfers to and from DCA, IAD, and BWI airports. From a transfer from Alexandria to Washington Dulles or a ride home, we make sure that you travel with comfort and dependability.</p>
+            <p class="mb-3 secondaryText greyText">Traveling by air can be tiring, but your ground travel need not be. With our Alexandria Airport Limo Service, enjoy on-time pickups, comfortable rides, and smooth transfers to and from <a href="/dca-shuttle-service-dca-car-service.html">DCA</a>, <a href="/iad-limo-service-dulles-car-service.html">IAD</a>, and <a href="/bwi-shuttle-service-bwi-limo-service.html">BWI airports</a>. From a transfer from Alexandria to Washington Dulles or a ride home, we make sure that you travel with comfort and dependability.</p>
             <h3 class="mb-3 level3 primaryColor text-uppercase">Airport Transfers to DCA by AirportShuttles4Less</h3>
             <p class="mb-3 secondaryText greyText">Ronald Reagan Washington National Airport (DCA) is among the busiest airports, demanding effective transportation. Our airport transportation to DCA in Alexandria provides seamless, timely services. You can opt for our DCA Sedan Service. Best for business executives and solo travelers who want a luxurious, personal ride. On the other hand our DCA Shuttle Service in Alexandria is comfortable and affordable transportation for groups and families. Ride first-class luxury aboard with our high-quality DCA Limo Service.</p>
             <h4 class="mb-3 level3 primaryColor text-uppercase">Get Premium Rides for Washington Dulles International Airport (IAD)</h4>
@@ -143,7 +143,7 @@
         <h4 class="mb-3 level4 blackText text-uppercase">Dream Wedding Transportation in Alexandria</h4>
         <p class="mb-3 secondaryText greyText">Make your wedding day unforgettable with our Alexandria Wedding Limo Service. Arrive in style to such locations as The Alexandrian Hotel or Carlyle House Historic Park for a photo perfect arrival.</p>
         <h4 class="mb-3 level4 blackText text-uppercase">Elite Corporate Transportation in Alexandria</h4>
-        <p class="mb-3 secondaryText greyText">Impress clients and business associates with our Corporate Limo Service in Alexandria. From airport pickup to executive meetings, our fleet ensures professionalism and luxury.</p>
+        <p class="mb-3 secondaryText greyText">Impress clients and business associates with our Corporate Limo Service in Alexandria. From airport pickup to executive meetings, <a href="/our-fleet.html"> our fleet</a> ensures professionalism and luxury.</p>
         <h4 class="mb-3 level4 blackText text-uppercase">Prom & Event Limo Services in Alexandria</h4>
         <p class="mb-3 secondaryText greyText">Turn heads on prom night or special events with our Alexandria Prom Transportation and Alexandria Concert Limo Service to places such as The Birchmere. Ride in style and comfort.</p>
         <h4 class="mb-3 level4 blackText text-uppercase">Luxury Sprinter Vans for Group Travel</h4>
@@ -155,8 +155,8 @@
         </p>
         <div class="accordion-area">
           <h3 class="mb-3 level3 primaryColor text-uppercase">Book Alexandria Transportation for Your Ride Today!</h3>
-          <p class="mb-3 secondaryText greyText">Want to upgrade your travel experience? Need a luxurious airport transfer or a classy ride for a special event? Our Alexandria Limo Service is here to help. Why wait? Call us today for a free estimate or call (443) 336-3333 to make your ride personal. You can also reserve your ride online fast and easy.</p>
-          <p class="mb-3 secondaryText greyText"><b>Book Alexandria Transportation for Your Ride Today!</b></p>
+          <p class="mb-3 secondaryText greyText">Want to upgrade your travel experience? Need a luxurious airport transfer or a classy ride for a special event? Our Alexandria Limo Service is here to help. Why wait? Call us today for a free estimate or call <a href="tel:4433363333"> (443) 336-3333</a> to make your ride personal. You can also reserve your ride online fast and easy.</p>
+          <p class="mb-3 secondaryText greyText"><b>Book <a href="/reservation.html"> Alexandria Transportation</a> for Your Ride Today!</b></p>
         </div>
       </div>
     </section>
