--- a/baltimore-shuttle-service.html
+++ b/baltimore-shuttle-service.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Premium Limo & Transportation Services in Baltimore, MD</title>
-  <meta name="description" content="Never settle for the ordinary. Experience premium transportation in Baltimore with AirportShuttles4Less’ Baltimore Limo Services." />
+  <title>Baltimore limo and Shuttle Service | Luxury, Comfortable Ride</title>
+  <meta name="description" content="Enjoy a luxury and comfortable ride with our Baltimore Limo and Shuttle Service. Reliable, stylish, and professional transportation for airport transfers, events, and more." />
   <link rel="canonical" href="https://airportshuttles4less.com/baltimore-shuttle-service.html" />
   <meta name="keywords" content="Baltimore Shuttle Service,,Car Service in Baltimore,Baltimore Wedding Limo Service,Baltimore Sporting Event Transportation,Baltimore Concert Limo Service,Shuttle Service in Baltimore,Airport Transportation in Baltimore,Corporate transportation in Baltimore">
   <!-- <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" /> -->
@@ -81,21 +81,18 @@
                   <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                     <img src="images/Baltimore/baltimore-1.webp" height="400px" width="300px" class="w-100 mb-3 topSecImg" alt="BWI-Transport" loading="lazy" />
                   </div>
-                </div>
-              </div>
-            </section>
-
-          <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-            <h1 class="mb-3 level3 primaryColor text-uppercase">Top Tier Limo & Transportation Services in Baltimore, MD</h1>
+                  <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+            <h1 class="mb-3 level3 primaryColor text-uppercase">Top Tier Limo & Shuttle Services in Baltimore, MD</h1>
             <p class="mb-3 secondaryText greyText">
               Baltimore, MD is a city rich in history, culture, and modern attractions to offer you a vibrant mix of charm and energy. It is mainly known for its picturesque Inner Harbor, historic landmarks, and thriving business hubs. So, as a result the city attracts a diverse crowd of business travelers, tourists, and locals alike. Given its strategic location near Washington, D.C., and major airports, reliable <b>transportation in Baltimore</b> is very essential for a peaceful travel experience.
             </p>
-          </div>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-12">
             <p class="mb-3 secondaryText greyText">
               With pride, <b>AirportShuttles4Less</b> offers you <b>Baltimore Limo Service</b> along with other top-notch transportation services in Maryland, Washington, D.C., and Virginia. The fleet is designed to bring a luxurious, comfortable, and convenient ride for every journey. Step into a clean and elegant vehicle, and forget all your stress on account of traffic, parking, and long queues. Our <b>Baltimore transportation service</b> as well as <b>Airport Transportation in Baltimore</b> ensures a hassle-free journey for solo travelers, families, and large groups alike.
             </p>
           </div>
+                </div>
+              </div>
+            </section>
         </div>
       </div>
     </section>
@@ -133,7 +130,7 @@
               Airport Transfers to BWI by AirportShuttles4Less
             </h3>
             <p class="mb-3 secondaryText greyText">
-              Baltimore/Washington International Thurgood Marshall Airport (BWI) is designed to serve travelers from both countries, and accessibility should be as smooth as your flight. A quick transfer or a first-class travel experience is ensured with our <a href="https://airportshuttles4less.com/baltimore-airport-transportation.html">Baltimore airport transportation to BWI</a>, which ensures punctual, hassle-free services. You can use our:
+              Baltimore/Washington International Thurgood Marshall Airport (BWI) is designed to serve travelers from both countries, and accessibility should be as smooth as your flight. A quick transfer or a first-class travel experience is ensured with our <a href="https://airportshuttles4less.com/baltimore-shuttle-service.html">Baltimore airport transportation to BWI</a>, which ensures punctual, hassle-free services. You can use our:
             </p>
             <ul>
               <li>
