--- a/bwi-airport-sedan-service.html
+++ b/bwi-airport-sedan-service.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luxury Sedans | Airport Transfers & Point-to-Point Service</title>
-  <meta name="description" content="With AirportShuttles4Less, travel in style and comfort with our luxury selection of sedans, perfect for airport transfers and more.">
+  <title>Luxury Airport Sedan Serivce BWI | Airport Transfers & Point-to-Point Service</title>
+  <meta name="description" content="Experience reliable luxury with our Airport Sedan Service at BWI. We provide professional airport transfers and point-to-point transportation for a smooth, comfortable ride.">
   <meta name="keywords" content="Sedan,Sedans,Executive sedans,Luxury Sedans,fleets,cadillac esclade, sedan service, sedan near me">
   <link rel="canonical" href="https://airportshuttles4less.com/bwi-airport-sedan-service.html">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -213,7 +213,7 @@
                     Be ready to experience unmatched luxury and comfort with our premium sedan selections from <b>Lincoln Continental, Volvo s90</b> and or <b>Mercedes s580</b>, featuring heated and cooled seats, advanced navigation, tri-zone climate control, and a Rear Vision Camera. Our spacious SUV service is perfect for your airport transfers and corporate transportation to group outings and city tours, any journey requiring spacious luggage accommodations. BWI sedan Service, DCA sedan Service, Dulles sedan Service
 
                 </p>
-                <b>Book Now !! <a href="https://airportshuttles4less.com/baltimore-airport-transportation.html">Baltimore best airport sedan service</a>, Baltimore Best chauffeur car service, <a href="https://airportshuttles4less.com/point-to-point-limo-service.html">Point to point limo service</a>, <a href="https://airportshuttles4less.com/winery-and-city-tours.html">Baltimore city tour service</a>, <a href="https://airportshuttles4less.com/corporate-transportation-services.html">Baltimore executive corporate transportation service</a></b> 
+                <b>Book Now !! <a href="https://airportshuttles4less.com/baltimore-shuttle-service.html">Baltimore best airport sedan service</a>, Baltimore Best chauffeur car service, <a href="https://airportshuttles4less.com/point-to-point-limo-service.html">Point to point limo service</a>, <a href="https://airportshuttles4less.com/winery-and-city-tours.html">Baltimore city tour service</a>, <a href="https://airportshuttles4less.com/corporate-transportation-services.html">Baltimore executive corporate transportation service</a></b> 
 
             </div>
         </div>
