--- a/shuttle-service-washington-dc.html
+++ b/shuttle-service-washington-dc.html
@@ -7,7 +7,7 @@
   <title>Washington D.C. Limo & Transportation Services</title>
   <meta name="description" content=" Are you ready to travel with the best Washington D.C. Limo Service? Book AirportShuttles4Less for all your travelling needs!" />
   <meta name="keyword" content="Washington D.C. Shuttle Service,Washington D.C. Car Service,Washington Wedding Limo Service,Washington D.C. Sporting Event Transportation,Washington D.C. Concert Limo Service,Shuttle Service in Washington,Airport Transportation in Washington D.C.,Corporate transportation in Washington D.C.,Washington DC Union Station Car Service and Limo Transportation,bus charter to Washington DC Convention Center,group transportation services,BWI,IAD,DCA,Shuttle service,Limo service,Airport transportation,Sedan service,Perfect sedan service">
-  <link rel="canonical" href="https://airportshuttles4less.com/washington-d.c-shuttle-service.html" />
+  <link rel="canonical" href="https://airportshuttles4less.com/shuttle-service-washington-dc.html " />
   <!-- <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" /> -->
 
   <!-- CSS Files -->
